--- a/src/content/once-ui/components/arrow.mdx
+++ b/src/content/once-ui/components/arrow.mdx
@@ -46,9 +46,9 @@ A decorative arrow component that animates when a specified trigger element is h
     ["trigger", "string"],
     ["scale", "number", "0.8"],
     ["color", ["onBackground", "onSolid"], "onBackground"],
-    ["style", "CSSProperties"],
-    ["className", "string"]
-    ["...flex", "FlexProps"]
+    ["style"],
+    ["className"],
+    ["...flex"]
   ]}
 />
 
