--- a/src/content/once-ui/components/avatar.mdx
+++ b/src/content/once-ui/components/avatar.mdx
@@ -144,8 +144,8 @@ Use the T-shirt size model or set sizes with numbers (REM).
     ["loading", "boolean", "false"],
     ["empty", "boolean", "false"],
     ["statusIndicator", "object"],
-    ["style", "CSSProperties"],
-    ["className", "string"]
-    ["...flex", "FlexProps"]
+    ["style"],
+    ["className"],
+    ["...flex"]
   ]}
 />
