--- a/src/content/once-ui/components/avatarGroup.mdx
+++ b/src/content/once-ui/components/avatarGroup.mdx
@@ -274,8 +274,8 @@ AvatarGroup supports all the same avatar types as the Avatar component.
     ["size", ["xs", "s", "m", "l", "xl"], "m"],
     ["reverse", "boolean", "false"],
     ["limit", "number"],
-    ["style", "CSSProperties"],
-    ["className", "string"]
-    ["...flex", "FlexProps"]
+    ["style"],
+    ["className"]
+    ["...flex"]
   ]}
 />
