--- a/src/content/once-ui/components/background.mdx
+++ b/src/content/once-ui/components/background.mdx
@@ -320,10 +320,10 @@ Create a spotlight or reveal effect with the mask property.
     ["grid", "GridProps", "{ }"],
     ["lines", "LinesProps", "{ }"],
     ["mask", "MaskProps", "{ }"],
-    ["className", "string", "-"],
-    ["style", "React.CSSProperties", "-"],
-    ["children", "React.ReactNode", "-"],
-    ["...Flex", "Flex props", "-"]
+    ["className"],
+    ["style"],
+    ["children"],
+    ["...flex"]
   ]}
 />
 
