--- a/src/content/once-ui/components/banner.mdx
+++ b/src/content/once-ui/components/banner.mdx
@@ -155,18 +155,9 @@ Add interactive elements to banners.
 
 ## API reference
 
-<Table
-  marginTop="16"
-  marginBottom="24"
-  data={{
-    headers: [
-      { content: "Prop" },
-      { content: "Type" },
-      { content: "Default" },
-    ],
-    rows: [
-      ["children", <InlineCode>ReactNode</InlineCode>, "-"],
-      ["...Flex", <InlineCode>Flex props</InlineCode>, "-"]
-    ]
-  }}
+<PropsTable
+  content={[
+    ["children"],
+    ["...flex"]
+  ]}
 />
