--- a/src/content/once-ui/components/button.mdx
+++ b/src/content/once-ui/components/button.mdx
@@ -376,7 +376,7 @@ Override default styles with data attributes.
     ["children", "ReactNode"],
     ["href", "string"],
     ["arrowIcon", "boolean", "false"],
-    ["className", "string"],
-    ["style", "CSSProperties"],
+    ["className"],
+    ["style"],
   ]}
 />
