--- a/src/content/once-ui/components/card.mdx
+++ b/src/content/once-ui/components/card.mdx
@@ -109,8 +109,8 @@ The `Card` component is a versatile, fluid container for content with a hover ef
     ["children", "ReactNode"],
     ["href", "string"],
     ["onClick", "() => void"],
-    ["className", "string"],
-    ["style", "CSSProperties"],
-    ["...Flex", "FlexProps"]
+    ["className"],
+    ["style"],
+    ["...flex"]
   ]}
 />
