--- a/src/content/once-ui/components/accordion.mdx
+++ b/src/content/once-ui/components/accordion.mdx
@@ -53,9 +53,9 @@ A collapsible container that allows users to expand and collapse sections of con
     ["size", ["s", "m", "l"], "m"],
     ["radius", ["xs", "s", "m", "l", "xl", "full"]],
     ["open", "boolean", "false"],
-    ["style", "CSSProperties"],
-    ["className", "string"]
-    ["...flex", "FlexProps"]
+    ["style"],
+    ["className"],
+    ["...flex"]
   ]}
 />
 
