--- a/src/content/once-ui/components/accordionGroup.mdx
+++ b/src/content/once-ui/components/accordionGroup.mdx
@@ -69,9 +69,9 @@ A container component that groups multiple Accordion components together with co
   content={[
     ["items", "AccordionItem[]"],
     ["size", ["s", "m", "l"], "m"],
-    ["style", "CSSProperties"],
-    ["className", "string"]
-    ["...flex", "FlexProps"]
+    ["style"],
+    ["className"],
+    ["...flex"]
   ]}
 />
 
